Adapted graph block for 1060px in `media.scss`

--- a/profile.html
+++ b/profile.html
@@ -230,21 +230,39 @@
         <h1 class="post__title">Прибыль</h1>
         <div class="post__graph__inner">
           <div class="post__graph-box__inner">
+
             <div class="post__graph-box">
               <div class="post__graph-box-text">Общий процент прибыли</div>
               <div class="post__graph-box-percent">25%</div>
             </div>
+
             <div class="post__graph-box post__graph-box--active">
               <div class="post__graph-box-text post__graph-box-text--kz">процент прибыли kzt</div>
               <div class="post__graph-box-percent">5%</div>
             </div>
+
             <div class="post__graph-box">
               <div class="post__graph-box-text post__graph-box-text--ru">процент прибыли RUB</div>
               <div class="post__graph-box-percent">15%</div>
             </div>
+
             <div class="post__graph-box">
               <div class="post__graph-box-text post__graph-box-text--us">процент прибыли USD</div>
               <div class="post__graph-box-percent">1%</div>
+            </div>
+
+            <div class="post__graph-box-mini__box">
+              <div class="post__graph-box-mini">
+                <div class="post__graph-currency-country-kz">KZT</div>
+              </div>
+
+              <div class="post__graph-box-mini">
+                <div class="post__graph-currency-country-ru">RUB</div>
+              </div>
+
+              <div class="post__graph-box-mini">
+                <div class="post__graph-currency-country-us">USD</div>
+              </div>
             </div>
           </div>
 
@@ -382,6 +400,7 @@
         <h1 class="post__title">Расходы и доходы</h1>
         <div class="post__graph__inner">
           <div class="post__graph-box__inner">
+
             <div class="post__graph-box">
               <div class="post__graph-box-text">Общее количество расходов и доходов</div>
               <div class="post__graph-box-percent-wrapper">
@@ -389,6 +408,7 @@
                 <div class="post__graph-box-percent post__graph-box-percent--upArrows">25%</div>
               </div>
             </div>
+
             <div class="post__graph-box post__graph-box--active">
               <div class="post__graph-box-text post__graph-box-text--kz">Общее количество расходов и доходов в kzt</div>
               <div class="post__graph-box-percent-wrapper">
@@ -396,6 +416,7 @@
                 <div class="post__graph-box-percent post__graph-box-percent--upArrows">20 569 560</div>
               </div>
             </div>
+
             <div class="post__graph-box">
               <div class="post__graph-box-text post__graph-box-text--ru">Общее количество расходов и доходов в RUB</div>
               <div class="post__graph-box-percent-wrapper">
@@ -403,6 +424,7 @@
                 <div class="post__graph-box-percent post__graph-box-percent--upArrows">5 998 365</div>
               </div>
             </div>
+
             <div class="post__graph-box">
               <div class="post__graph-box-text post__graph-box-text--us">Общее количество расходов и доходов в USD</div>
               <div class="post__graph-box-percent-wrapper">
@@ -410,6 +432,21 @@
                 <div class="post__graph-box-percent post__graph-box-percent--upArrows">15 896</div>
               </div>
             </div>
+
+            <div class="post__graph-box-mini__box">
+              <div class="post__graph-box-mini">
+                <div class="post__graph-currency-country-kz">KZT</div>
+              </div>
+
+              <div class="post__graph-box-mini">
+                <div class="post__graph-currency-country-ru">RUB</div>
+              </div>
+
+              <div class="post__graph-box-mini">
+                <div class="post__graph-currency-country-us">USD</div>
+              </div>
+            </div>
+
           </div>
 
           <div class="post__graph-graph__box">
