Add burger in header and delete excess header blocks

--- a/about.html
+++ b/about.html
@@ -60,46 +60,9 @@
         <div class="container">
             <div class="header__inner">
                 <div class="header__side-left">
-                    <a href="index.html" class="header__logo">
-                        <img src="images/logo.png" alt="">
-                    </a>
-                    <ul class="lang-switcher">
-                        <a href="#" class="lang-ru">
-                            <li>RU</li>
-                        </a>
-                        <a href="#" class="lang-en">
-                            <li>EN</li>
-                        </a>
-                    </ul>
-                </div>
-                <div class="header__side-center">
-                    <nav class="header__nav">
-                        <a href="about.html" class="header__nav-link">О НАC</a>
-                        <a href="services.html" class="header__nav-link">УСЛУГИ И ЦЕНЫ</a>
-                        <a href="main.html" class="header__nav-link">ГЛАВНАЯ</a>
-                        <a href="reviews.html" class="header__nav-link">ОТЗЫВЫ</a>
-                    </nav>
-                </div>
-                <div class="header__side-right">
-                    <a href="sign-in.html" class="header__login">АВТОРИЗАЦИЯ</a>
-                    <a href="#" class="profile__avatar">
-                        <img src="https://via.placeholder.com/70" alt="">
-                    </a>
-                    <div class="header__search">
-                        <img src="images/ico/loupe.svg" alt="">
+                    <div class="burger__box">
+                        <span class="burger"></span>
                     </div>
-                    <label class="header__search-box">
-                        <input type="search" class="search__box" placeholder="Введите ключевое слово">
-                    </label>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="header">
-        <div class="container">
-            <div class="header__inner">
-                <div class="header__side-left">
                     <a href="index.html" class="header__logo">
                         <img src="images/logo.png" alt="">
                     </a>
