--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <div class="container">
             <div class="header__inner">
                 <div class="header__side-left">
+                    <div class="burger__box">
+                        <span class="burger"></span>
+                    </div>
                     <a href="index.html" class="header__logo">
                         <img src="images/logo.png" alt="">
                     </a>
