Fixed site name in footer

--- a/main.html
+++ b/main.html
@@ -160,7 +160,8 @@
         </p>
         <p class="post__main-text">
           Ботагоз Жуманова объяснила:
-          "Если судить по десятибальной шкале, то я бы сказала, что общий уровень финансовый грамотности в Казахстане на
+          "Если судить по десятибалльной шкале, то я бы сказала, что общий уровень финансовый грамотности в Казахстане
+          на
           уровне тройки. У основной массы населения нет понимания многих финансовых понятий, они не оценивают и не
           контролируют расходы и доходы, залезают в долги. Люди не отличают кредитные карты от дебетовых. Многие берут
           кредиты и сравнивают банки только по ставкам, не разбираясь в сути условий. Один из распространённых
@@ -299,7 +300,7 @@
         </div>
       </div>
       <div class="footer__bottom">
-        <div class="footer__copy">© 2021 Finanlity | Финансовая грамотность</div>
+        <div class="footer__copy">© 2021 Finanlitcy | Финансовая грамотность</div>
         <div class="footer__links">
           <a href="#" class="footer__link">Terms & conditions</a>
           <a href="#" class="footer__link">Privacy policy</a>
