--- a/reset-password-verification.html
+++ b/reset-password-verification.html
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="footer__bottom">
-                <div class="footer__copy">© 2021 Finanlity | Финансовая грамотность</div>
+                <div class="footer__copy">© 2021 Finanlitcy | Финансовая грамотность</div>
                 <div class="footer__links">
                     <a href="#" class="footer__link">Terms & conditions</a>
                     <a href="#" class="footer__link">Privacy policy</a>
