Add another sidebar

--- a/index.html
+++ b/index.html
@@ -99,6 +99,64 @@
         </div>
     </section>
 
+    <section class="sideMenu__burger">
+        <div class="sideMenu__burger-inner">
+
+            <div class="sideMenu__burger-header">
+                <div class="sideMenu__burger-title">ВХОД НЕ ВЫПОЛНЕН</div>
+                <button type="submit" class="btn-sign btn-sign--fourth">ВОЙТИ</button>
+            </div>
+
+            <ul class="sideMenu__burger-nav">
+                <li class="sideMenu__burger-item">
+                    <a href="about.html" class="header__nav-link">О НАC</a>
+                </li>
+                <li class="sideMenu__burger-item">
+                    <a href="services.html" class="header__nav-link">УСЛУГИ И ЦЕНЫ</a>
+                </li>
+                <li class="sideMenu__burger-item">
+                    <a href="main.html" class="header__nav-link">ГЛАВНАЯ</a>
+                </li>
+                <li class="sideMenu__burger-item">
+                    <a href="reviews.html" class="header__nav-link">ОТЗЫВЫ</a>
+                </li>
+            </ul>
+
+            <ul class="sideMenu__burger-box">
+                <li class="sideMenu__burger-item">
+                    <a href="#transfer" class="sideMenu__ico-link">
+                        <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__ico-img">
+                        <span class="sideMenu__burger-text">Переводы</span>
+                    </a>
+                </li>
+                <li class="sideMenu__burger-item">
+                    <a href="#transaction" class="sideMenu__ico-link">
+                        <img src="images/ico/coins.svg" alt="" class="sideMenu__ico-img">
+                        <span class="sideMenu__burger-text">Просмотр транзакций</span>
+                    </a>
+                </li>
+                <li class="sideMenu__burger-item">
+                    <a href="#" class="sideMenu__ico-link">
+                        <img src="images/ico/qiut.svg" alt="" class="sideMenu__ico-img">
+                        <span class="sideMenu__burger-text">Выйти</span>
+                    </a>
+                </li>
+            </ul>
+
+            <div class="sideMenu__footer">
+                <a href="#support" class="sideMenu__ico-link">
+                    <img src="images/ico/support.svg" alt="" class="sideMenu__ico-img">
+                    <span class="sideMenu__burger-text">Тех. Поддержка </span>
+                </a>
+                <a href="#" class="sideMenu__settings">
+                    <img class="sideMenu__ico-img" src="images/ico/settings.svg" alt="">
+                    <span class="sideMenu__burger-text">Настройки</span>
+                </a>
+            </div>
+
+        </div>
+    </section>
+
     <section class="intro">
         <div class="container">
             <div class="intro__wrapper">
