--- a/index.html
+++ b/index.html
@@ -108,17 +108,17 @@
             </div>
 
             <ul class="sideMenu__burger-nav">
-                <li class="sideMenu__burger-item">
-                    <a href="about.html" class="header__nav-link">О НАC</a>
+                <li class="sideMenu__burger-item__menu">
+                    <a href="about.html" class="sideMenu__burger-link">О НАC</a>
                 </li>
-                <li class="sideMenu__burger-item">
-                    <a href="services.html" class="header__nav-link">УСЛУГИ И ЦЕНЫ</a>
+                <li class="sideMenu__burger-item__menu">
+                    <a href="services.html" class="sideMenu__burger-link">УСЛУГИ И ЦЕНЫ</a>
                 </li>
-                <li class="sideMenu__burger-item">
-                    <a href="main.html" class="header__nav-link">ГЛАВНАЯ</a>
+                <li class="sideMenu__burger-item__menu">
+                    <a href="main.html" class="sideMenu__burger-link">ГЛАВНАЯ</a>
                 </li>
-                <li class="sideMenu__burger-item">
-                    <a href="reviews.html" class="header__nav-link">ОТЗЫВЫ</a>
+                <li class="sideMenu__burger-item__menu">
+                    <a href="reviews.html" class="sideMenu__burger-link">ОТЗЫВЫ</a>
                 </li>
             </ul>
 
@@ -132,7 +132,7 @@
                 <li class="sideMenu__burger-item">
                     <a href="#transaction" class="sideMenu__ico-link">
                         <img src="images/ico/coins.svg" alt="" class="sideMenu__ico-img">
-                        <span class="sideMenu__burger-text">Просмотр транзакций</span>
+                        <span class="sideMenu__burger-text">Транзакции</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
@@ -143,8 +143,8 @@
                 </li>
             </ul>
 
-            <div class="sideMenu__footer">
-                <a href="#support" class="sideMenu__ico-link">
+            <div class="sideMenu__burger-footer">
+                <a href="#support" class="sideMenu__birger-ico__link">
                     <img src="images/ico/support.svg" alt="" class="sideMenu__ico-img">
                     <span class="sideMenu__burger-text">Тех. Поддержка </span>
                 </a>
