Adapted sidebar for 730px, 670px, 615px, 580px, 550px, 500px in `media.scss`

--- a/index.html
+++ b/index.html
@@ -125,19 +125,19 @@
             <ul class="sideMenu__burger-box">
                 <li class="sideMenu__burger-item">
                     <a href="#transfer" class="sideMenu__ico-link">
-                        <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__ico-img">
+                        <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Переводы</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
                     <a href="#transaction" class="sideMenu__ico-link">
-                        <img src="images/ico/coins.svg" alt="" class="sideMenu__ico-img">
+                        <img src="images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Транзакции</span>
                     </a>
                 </li>
                 <li class="sideMenu__burger-item">
                     <a href="#" class="sideMenu__ico-link">
-                        <img src="images/ico/qiut.svg" alt="" class="sideMenu__ico-img">
+                        <img src="images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
                         <span class="sideMenu__burger-text">Выйти</span>
                     </a>
                 </li>
@@ -145,11 +145,11 @@
 
             <div class="sideMenu__burger-footer">
                 <a href="#support" class="sideMenu__birger-ico__link">
-                    <img src="images/ico/support.svg" alt="" class="sideMenu__ico-img">
+                    <img src="images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
                     <span class="sideMenu__burger-text">Тех. Поддержка </span>
                 </a>
                 <a href="#" class="sideMenu__settings">
-                    <img class="sideMenu__ico-img" src="images/ico/settings.svg" alt="">
+                    <img class="sideMenu__burger-ico__img" src="images/ico/settings.svg" alt="">
                     <span class="sideMenu__burger-text">Настройки</span>
                 </a>
             </div>
