Add new sidebar in another html files

--- a/profile.html
+++ b/profile.html
@@ -154,6 +154,64 @@
     </div>
   </section>
 
+  <section class="sideMenu__burger">
+    <div class="sideMenu__burger-inner">
+
+      <div class="sideMenu__burger-header">
+        <div class="sideMenu__burger-title">ВХОД НЕ ВЫПОЛНЕН</div>
+        <button type="submit" class="btn-sign btn-sign--fourth">ВОЙТИ</button>
+      </div>
+
+      <ul class="sideMenu__burger-nav">
+        <li class="sideMenu__burger-item__menu">
+          <a href="about.html" class="sideMenu__burger-link">О НАC</a>
+        </li>
+        <li class="sideMenu__burger-item__menu">
+          <a href="services.html" class="sideMenu__burger-link">УСЛУГИ И ЦЕНЫ</a>
+        </li>
+        <li class="sideMenu__burger-item__menu">
+          <a href="main.html" class="sideMenu__burger-link">ГЛАВНАЯ</a>
+        </li>
+        <li class="sideMenu__burger-item__menu">
+          <a href="reviews.html" class="sideMenu__burger-link">ОТЗЫВЫ</a>
+        </li>
+      </ul>
+
+      <ul class="sideMenu__burger-box">
+        <li class="sideMenu__burger-item">
+          <a href="#transfer" class="sideMenu__ico-link">
+            <img src="images/ico/money-transfer.svg" alt="" class="sideMenu__burger-ico__img">
+            <span class="sideMenu__burger-text">Переводы</span>
+          </a>
+        </li>
+        <li class="sideMenu__burger-item">
+          <a href="#transaction" class="sideMenu__ico-link">
+            <img src="images/ico/coins.svg" alt="" class="sideMenu__burger-ico__img">
+            <span class="sideMenu__burger-text">Транзакции</span>
+          </a>
+        </li>
+        <li class="sideMenu__burger-item">
+          <a href="#" class="sideMenu__ico-link">
+            <img src="images/ico/qiut.svg" alt="" class="sideMenu__burger-ico__img">
+            <span class="sideMenu__burger-text">Выйти</span>
+          </a>
+        </li>
+      </ul>
+
+      <div class="sideMenu__burger-footer">
+        <a href="#support" class="sideMenu__birger-ico__link">
+          <img src="images/ico/support.svg" alt="" class="sideMenu__burger-ico__img">
+          <span class="sideMenu__burger-text">Тех. Поддержка </span>
+        </a>
+        <a href="#" class="sideMenu__settings">
+          <img class="sideMenu__burger-ico__img" src="images/ico/settings.svg" alt="">
+          <span class="sideMenu__burger-text">Настройки</span>
+        </a>
+      </div>
+
+    </div>
+  </section>
+
   <section class="main main--third" id="fullpage">
     <div class="container">
       <div class="post__box" id='myBalance'>
