Add new footer to all html files

--- a/about.html
+++ b/about.html
@@ -269,6 +269,91 @@
                 </div>
                 <button class="footer__btn"></button>
             </div>
+
+            <!-- For phone device -->
+
+            <div class="footer__top-mini">
+                <div class="footer__top-mini__inner">
+                    <div class="footer__logo">
+                        <a href="#"><img src="images/logo-2.png" alt="logo" class="footer__logo-img"></a>
+                    </div>
+                    <div class="footer__copy">© 2021 Finanlitcy | Финансовая грамотность</div>
+                </div>
+            </div>
+
+            <div class="footer__nav-mini">
+                <div class="footer__nav-mini__inner">
+                    <nav class="footer__nav">
+                        <a href="services.html" class="footer__nav-link">Offer</a>
+                        <a href="about.html" class="footer__nav-link">О компании</a>
+                        <a href="services.html" class="footer__nav-link">Предлагаемые услуги</a>
+                        <a href="why-choose.html" class="footer__nav-link">Почему выбирают нас?</a>
+                    </nav>
+                    <nav class="footer__nav">
+                        <a href="reviews.html" class="footer__nav-link">Отзывы</a>
+                        <a href="profile.html" class="footer__nav-link">Личный кабинет</a>
+                        <a href="#" class="footer__nav-link">Вопросы и ответы</a>
+                        <a href="#" class="footer__nav-link">Наша история</a>
+                    </nav>
+                </div>
+            </div>
+
+            <div class="footer__social-mini">
+                <div class="footer__social-mini__inner">
+                    <div class="footer__social-box">
+                        <div class="footer__social">
+                            <a href="#"><img class="footer__social-item" src="images/ico/pinterest.svg"
+                                    alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="images/ico/vk.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="images/ico/facebook.svg" alt="social"></a>
+                        </div>
+                        <div class="footer__social">
+                            <a href="#"><img class="footer__social-item" src="images/ico/instagram.svg"
+                                    alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="images/ico/telegram.svg" alt="social"></a>
+                            <a href="#"><img class="footer__social-item" src="images/ico/twitter.svg" alt="social"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__apps-mini">
+                <div class="footer__apps-mini__inner">
+                    <div class="footer__apps">
+                        <a href="#"><img class="footer__app" src="images/google-play.png" alt="google"></a>
+                        <a href="#"><img class="footer__app" src="images/app-store.png" alt="google"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__contacts-mini">
+                <div class="footer__contacts-mini__inner">
+                    <div class="footer__contacts">
+                        <h1 class="footer__contacts-title">
+                            Контакты
+                        </h1>
+                        <a href="https://goo.gl/maps/RWTJRrNC6oC6pCUc7" class="footer__contacts-location">г. Алматы, ул.
+                            Абая, 158
+                        </a>
+                        <a href="tel:77774528989" class="footer__contacts-tel">тел: +7777 452 89 89
+                        </a>
+                        <a href="mailto:finanlity@gmail.com" class="footer__contacts-mail">E-mail:
+                            finanlity@gmail.com</a>
+                        <div class="footer__contacts-time">Часы работы: с 8:00 до 20:00</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__links-mini">
+                <div class="footer__link-mini__inner">
+                    <div class="footer__links">
+                        <a href="#" class="footer__link">Terms & conditions</a>
+                        <a href="#" class="footer__link">Privacy policy</a>
+                        <a href="#" class="footer__link">Cookies policy</a>
+                        <a href="#" class="footer__link">Cookies Settings</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
