Adapted blocks for 600px in `media.scss`

--- a/sign-in.html
+++ b/sign-in.html
@@ -174,10 +174,12 @@
                         </label>
                         <div class="post__sign-btns">
                             <button type="submit" class="btn-sign btn-sign--second">ВХОД</button>
-                            <label>
-                                <input class="post__sign-btns__input" type="checkbox" name="password" id="">
-                            </label>
-                            <p class="post__sign-btns__password">Запомнить пароль <br> при следующем входе</p>
+                            <div class="post__sign-btns__input-box">
+                                <label>
+                                    <input class="post__sign-btns__input" type="checkbox" name="password" id="">
+                                </label>
+                                <p class="post__sign-btns__password">Запомнить пароль <br> при следующем входе</p>
+                            </div>
                             <div class="post__sign-btns__text">
                                 <p class="post__sign-door__text">Забыли пароль?</p>
                                 <a href="reset-password.html" class="post__sign-door__link">Восстановить пароль</a>
