Fixed some bugs

--- a/profile.html
+++ b/profile.html
@@ -290,11 +290,13 @@
           <div class="post__graph-graph__box">
             <div class="post__graph-graph__text-inner">
               <div class="post__graph-graph__text">график прибыли kzt</div>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--today post__graph-graph-nav--active">за
-                сегодня</a>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--week">за неделю</a>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--month">за месяц</a>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
+              <div class="post__graph-graph__links">
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--today post__graph-graph-nav--active">за
+                  сегодня</a>
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--week">за неделю</a>
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--month">за месяц</a>
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
+              </div>
             </div>
             <img src="images/graph/1.png" alt="" class="post__graph-graph-img">
             <div class="cursor"></div>
@@ -472,7 +474,7 @@
 
           <div class="post__graph-graph__box">
             <div class="post__graph-graph__text-inner">
-              <div class="post__graph-graph__text">График количества <br> расходов и <br> доходов KZT</div>
+              <div class="post__graph-graph__text">График количества расходов и доходов KZT</div>
               <div class="post__graph-indicators">
                 <div class="post__graph-indicators-yellow">
                   доход
@@ -481,12 +483,14 @@
                   расход
                 </div>
               </div>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--today post__graph-graph-nav--active">за
-                сегодня</a>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--week">за неделю</a>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--month">за месяц</a>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--3month">за 3 месяца</a>
-              <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
+              <div class="post__graph-graph__links">
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--today post__graph-graph-nav--active">за
+                  сегодня</a>
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--week">за неделю</a>
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--month">за месяц</a>
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--3month">за 3 месяца</a>
+                <a href="#" class="post__graph-graph-nav post__graph-graph-nav--year">за год</a>
+              </div>
             </div>
             <img src="images/graph/2.png" alt="" class="post__graph-graph-img">
             <div class="cursor--yellow"></div>
